# Motion-Planning-homework

Dijkstra and A*/src/: README.md
Dijkstra and A*/src/grid_path_searcher/: package.xml
Dijkstra and A*/src/grid_path_searcher/src/: demo_node.cpp  random_complex_generator.cpp
Kinodynamic Planning/: 实验报告.docx
Kinodynamic Planning/src/waypoint_generator/: CMakeLists.txt
Optimal Trajectory/src/src/: click_gen.cpp
RRT and RRT*/: result.txt
RRT and RRT*/devel/: .catkin  .rosinstall  local_setup.sh
RRT and RRT*/devel/include/self_msgs_and_srvs/: GlbObsRcvRequest.h  GlbObsRcvResponse.h  LearningSamplerRequest.h  LearningSamplerResponse.h  input_point.h  output_point.h
RRT and RRT*/devel/lib/map_generator/: random_forest
RRT and RRT*/devel/lib/mockamap/: mockamap_node
RRT and RRT*/devel/lib/pkgconfig/: map_generator.pc  mockamap.pc  occ_grid.pc  path_finder.pc  rviz_plugins.pc  self_msgs_and_srvs.pc
RRT and RRT*/devel/share/map_generator/cmake/: map_generatorConfig.cmake
RRT and RRT*/devel/share/mockamap/cmake/: mockamapConfig.cmake
RRT and RRT*/src/path_finder/src/: test_planner.cpp
RRT and RRT*/src/rviz_plugins/: CMakeLists.txt
grid_path_searcher/: CMakeLists.txt
grid_path_searcher/cfg/: Astar_searcher.cfg
grid_path_searcher/include/: Astar_searcher.h
grid_path_searcher/launch/rviz_config/: demo.rviz
grid_path_searcher/src/: Astar_seacher_other.cpp  Astar_searcher.cpp  demo_node.cpp  random_complex_generator.cpp
sampling-based-path-finding-main/src/path_finder/launch/: traj.rviz
(+11 files in other folders)
